# src/api/v1/admin/help/index.js
@@ -1,0 +1,6 @@
+const router = require('express').Router();
+const helpController = require('./help.controller');
+
+router.get('/', helpController.getHelps);
+
+module.exports = router;
