# src/api/v1/admin/index.js
@@ -2,12 +2,14 @@ const router = require('express').Router();
 
 const auth = require('./auth');
 const teams = require('./teams');
-const isAdmin = require('../../../middlewares/isAdmin');
 const users = require('./users');
+const help = require('./help');
+const isAdmin = require('../../../middlewares/isAdmin');
 
 router.use('/auth', auth);
 router.use('/users', isAdmin, users);
 
 router.use('/teams', isAdmin, teams);
+router.use('/help', isAdmin, help);
 
 module.exports = router;
